menambahkan API untuk relasi antara tabel User dengan tabel Transaksi, membuat dokumentasi API nya, dan memperbaiki error dan bug
